# fast_api_service

./: .gitignore  Cargo.toml  pyproject.toml  readme.md
service_permutations_process/: main.py  permutations.py
src/: lib.rs  tertools;.rs
