[package]
name = "service_permutations_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "service_permutations_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
itertools = "0.11.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]