[project]
name = "service_permutations_rust"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.poetry]
name = "service_permutations_process"
version = "0.1.0"
description = ""
authors = ["Rinat Shaihetdinov <rinat.shaihetdinov@simbirsoft.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "service_permutations_process"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.270"
maturin = "^1.0.1"


[tool.maturin]
features = ["pyo3/extension-module"]


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
